--- a/app/views/products/references.html.erb
+++ b/app/views/products/references.html.erb
@@ -32,7 +32,7 @@
       No Package selected.
     </div>
     <div class="content">
-      There is package selected for this page.
+      There is no package selected for this page.
     </div>
   </div>
 
