--- a/app/views/page/impressum.html.erb
+++ b/app/views/page/impressum.html.erb
@@ -1,15 +1,15 @@
 <% title 'Impressum' %>
 
 <div class="impressum-container" style = "text-align: center;">
-  <%= image_tag 'worldmap_sf_b.jpg', {:width => 650}  %>
+  <%= image_tag 'worldmap.jpg', {:width => 650}  %>
 </div>
 <div class = "row">
-  <div class="offset1 span4" >
+  <div class="offset1 span4" style="margin-top: 50px;">
     <address>
       <strong>VersionEye GmbH</strong><br/>
       <br/>
-      Neckarauer-Waldweg 27<br/>
-      68199 Mannheim<br/>
+      Julius-Hatry-Str. 1<br/>
+      68163 Mannheim<br/>
       Germany<br/>
       <br/>
       E-Mail: contact [at] versioneye.com<br />
@@ -21,7 +21,8 @@
       Geschaeftsfuehrer: Robert Reiz<br />
     </address>
   </div>
+  <div class="span5" style="margin-top: 50px;">
+    <%= image_tag "mafinex.jpg", :class => "img-rounded" %>
+  </div>
 </div>
-<div class = "row" style="text-align: center; padding-top: 20px;">
-  Bitte benutzen Sie diese Logos für Pressemitteilungen: <%= link_to "VersionEye Logos", logos_path %>
-</div>
+
