--- a/app/views/page/imprint.html.erb
+++ b/app/views/page/imprint.html.erb
@@ -1,15 +1,15 @@
 <% title 'Imprint' %>
 
 <div class="impressum-container" style = "text-align: center;">
-  <%= image_tag 'worldmap_sf_b.jpg', {:width => 650}  %>
+  <%= image_tag 'worldmap.jpg', {:width => 650}  %>
 </div>
 <div class = "row">
   <div class="offset1 span4" style="margin-top: 50px;">
     <address>
       <strong>VersionEye GmbH</strong><br/>
       <br />
-      Neckarauer-Waldweg 27<br/>
-      68199 Mannheim<br/>
+      Julius-Hatry-Str. 1<br/>
+      68163 Mannheim<br/>
       Germany<br/>
       <br/>
       E-Mail: contact [at] versioneye.com<br />
@@ -20,5 +20,8 @@
       USt-IdNr.: DE282045007<br />
       CEO: Robert Reiz<br />
     </address>
+  </div>
+  <div class="span5" style="margin-top: 50px;">
+    <%= image_tag "mafinex.jpg", :class => "img-rounded" %>
   </div>
 </div>
