--- a/app/assets/stylesheets/enterprise.css.scss
+++ b/app/assets/stylesheets/enterprise.css.scss
@@ -25,10 +25,14 @@
 }
 
 h2{
-  text-decoration: underline;  
+  margin-top: 50px;
 }
 
 h3{
   font-size: 20px;
   font-family: 'Droid Serif'
+}
+
+.two_col_box{
+  padding: 0 5px 0 15px; 
 }
