--- a/app/assets/stylesheets/landing_page.css.scss
+++ b/app/assets/stylesheets/landing_page.css.scss
@@ -41,3 +41,12 @@ body,html{
   position:absolute;
   top: 10%;
 }
+
+.two_col_box{
+  padding: 0 5px 0 15px; 
+}
+
+h3{
+  font-size: 20px;
+  font-family: 'Droid Serif'
+}
