--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -5,7 +5,7 @@
 
   <div style='padding: 20px 0 20px 0; height: 215px;' >
     <div class='pull-left' >
-      <%= image_tag('versioneye-round-logo.png') %> 
+      <%= link_to image_tag('versioneye-round-logo.png'), root_path %> 
     </div>
     <div class="pull-left enterprise_header">Enterprise</div>
     <div class="pull-left enterprise_subheader">
@@ -13,6 +13,7 @@
     </div>
   </div>
 
+<!-- 
   <div class="well-white l_lp_well_margin" >
     <p>
       Enterprise grade software projects are complex, products contain many libraries 
@@ -41,15 +42,13 @@
       </ul>
     </p>
   </div>
+--> 
 
   <%= render "/shared/features" %>
 
 
-  <div class="well-white l_lp_well_margin" >
+  <div style="margin-left: 50px; margin-right: 50px;">
     <h2 class="no_margin">Who is using it?</h2>
-    <p style="padding-top: 15px;">
-      The very first client was <a href="https://www.xing.com">XING</a>! 
-    </p>
     <p class="cite_section">
       <cite>“Automated version notifications of open source and self developed closed source components by VersionEye Enterprise are very helpful especially to our distributed iOS teams. They help reducing coordination and communication efforts. The VersionEye team always did a great job supporting us with individual features!”</cite><br/>
       <div>
@@ -57,7 +56,7 @@
       </div>
     </p> 
     <p>
-      Download the full customer success story with XING <a href="/docs/XING-Customer-Success-Story.pdf">here</a>. 
+      Download the full <a href="/docs/XING-Customer-Success-Story.pdf">customer success story with XING</a>. 
     </p>
     <p>
       More success stories are coming soon! The other Enterprise clients are bigger than XING and that's why the approval process takes a bit longer for them. 
@@ -65,124 +64,64 @@
   </div>
 
 
-  <div class="well-white l_lp_well_margin" >
-    <h2 class="no_margin">Which repository servers are supported by VersionEye Enterprise?</h2>
-    <p style="padding-top: 15px;">
+<div >
+  <h2 >Which Git servers are supported?</h2>
+  <div class="well-white" style="margin-bottom: 0px;" >
+      <p>
+        VersionEye Enterprise can be connected with <a href="https://enterprise.github.com/">GitHub Enterprise</a>, 
+        Atlassian <a href="https://www.atlassian.com/software/stash">Stash</a> and <a href="https://bitbucket.org/">Bitbucket</a>. That way it's possible to use the Git servers API as single sign on (OAuth) 
+        for VersionEye Enterprise. <a href="https://about.gitlab.com/">GitLab</a> support is coming soon! 
+      </p>
+      <p > 
+        <%= image_tag "marketing/login_with_github.png "%> 
+        <%= image_tag "marketing/login_with_bitbucket.png" %> 
+        <%= image_tag "marketing/login_with_stash.png", :style => "width: 262px;" %>
+      </p>
+      <p>
+        Simply turn on the switch for project files in Git repositories 
+        which should be monitored by VersionEye! 
+      </p>
+  </div>
+</div>
+<p > 
+  <%= image_tag "marketing/git_repo_integration.png", :style => "margin-left: 1px;" %>
+</p> 
+<p>
+  Turn on the switch and receive daily email notifications 
+  about your dependencies. <br/><b>It was never easier to stay up-to-date!</b>
+</p>
+
+
+  <h2 >Which repository servers are supported?</h2>
+  <div class="well-white" >  
+    <p >
       The whole point of VersionEye Enterprise is that it can crawl internal repositories, 
       such as <a href="http://www.sonatype.com/nexus">Nexus Pro</a>, 
       <a href="http://www.jfrog.com/open-source/#os-arti">Artifactory Enterprise</a> 
-      or other ones. That way VersionEye gets a complete list of <b>ALL</b> your dependencies! 
+      and other ones. That way VersionEye gets a complete list of <b>ALL</b> your dependencies! 
       The open source dependencies AND your private components as well! 
     </p>
-    <div class="row">
-      <div class="cell2 pull-left">
-        <h3>Java Repositories</h3>
-        <p>
-          VersionEye Enterprise can crawl private Maven repositories and generate 
-          metrics for the private components. 
-          Every time a new artifact gets released in the private Maven repository 
-          VersionEye will notify the teams 
-          which are using an outdated version of that component in their projects! 
-          Currently <a href="http://www.sonatype.com/nexus">Nexus Pro</a> and 
-          <a href="http://www.jfrog.com/open-source/#os-arti">Artifactory Enterprise</a>
-          servers are supported! 
-        </p>
-        <p style="text-align: center;">
-          <%= image_tag "marketing/nexus.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray;" %>
-          <%= image_tag "marketing/artifactory.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray; margin-top: 5px;" %>
-        </p>
-      </div>
-      <div class="cell2 pull-left">
-        <h3>PHP Repositories</h3>
-        <p>
-          <a href="https://packagist.org/">Packagist</a> is the repository server for 
-          the PHP dependency manager <a href="https://getcomposer.org/">Composer</a>. 
-          But for the distribution of closed source PHP components big companies are 
-          using <a href="https://github.com/composer/satis">Satis</a>! A package repository 
-          generator! VersionEye can crawl private Satis servers several times a day and notify 
-          developers about new artifacts. Beside that VersionEye can monitor composer.json 
-          files in Git repositories and notify developers about outdated dependencies in 
-          composer.json files. 
-        </p>
-        <p style="text-align: center;">
-          <%= image_tag "marketing/satis.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray;" %>
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="cell2 pull-left">
-        <h3>Objective-C</h3>
-        <p>
-          <a href="http://cocoapods.org/">CocoaPods</a> is a dependency manager and repository 
-          server for Objective-C libraries. Specially used by iOS (iPhone) developers. Big 
-          companies are hosting their own private CocoaPods repositories for the distribution 
-          of their closed source Objecitve-C components. VersionEye is very well integrated with 
-          CocoaPods. It can crawl multiple private CocoaPods repositories and monitor Podfiles 
-          in Git repositories. 
-        </p>
-        <p style="text-align: center;">
-          <%= image_tag "marketing/cocoapods.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray;" %>
-        </p>
-      </div>
-    </div>
+    <p> 
+      Currently we support <a href="http://www.sonatype.com/nexus">Nexus Pro</a> (Java), 
+      <a href="http://www.jfrog.com/open-source/#os-arti">Artifactory Enterprise</a> (Java), 
+      <a href="http://cocoapods.org/">CocoaPods</a> (Objective-C) and <a href="https://github.com/composer/satis">Satis</a> (PHP)!
+    </p>
+    <p style="text-align: left;">
+      <a href="http://www.sonatype.com/nexus"><%= image_tag "marketing/nexus.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray;" %></a>
+      <a href="http://www.jfrog.com/open-source/#os-arti"><%= image_tag "marketing/artifactory.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray; margin-top: 5px;" %></a>
+      <a href="http://cocoapods.org/"><%= image_tag "marketing/cocoapods.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray;" %></a>
+      <a href="https://github.com/composer/satis"><%= image_tag "marketing/satis.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray;" %></a>
+    </p> 
+
   </div>
 
 
-  <div class="well-white l_lp_well_margin" >
-    <h2 class="no_margin">Which Git servers are supported by VersionEye?</h2>
-    <div class="row">
-      <div class="cell2 pull-left">
-        <h3>GitHub Enterprise</h3>
-        <p>
-          VersionEye Enterprise can be connected with <a href="https://enterprise.github.com/">GitHub Enterprise</a>. 
-          That way it's possible to use GitHub Enterprise as single sign on (OAuth) 
-          for VersionEye Enterprise. 
-        </p>
-        <p style="text-align: center;"> 
-          <%= image_tag "marketing/login_with_github.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray;" %>
-        </p>
-        <p>
-          Simply turn on the switch for project files in Git repositories 
-          which should be monitored by VersionEye! 
-        </p>
-        <p style="text-align: center;"> 
-          <%= image_tag "marketing/github_repository.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray; width: 394px;" %>
-        </p> 
-        <p>
-          Simply turn on the switch and receive daily email notifications 
-          about your dependencies. It was never easier! 
-        </p>
-      </div>
-      <div class="cell2 pull-left">
-        <h3>Atlassian Stash</h3>
-        <p>
-          VersionEye Enterprise can be connected with Atlassian 
-          <a href="https://www.atlassian.com/software/stash">Stash</a> 
-          to use it as a single sign on (OAuth) mechanism 
-          for VersionEye Enterprise. 
-        </p>
-        <p style="text-align: center;"> 
-          <%= image_tag "marketing/login_with_stash.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray; width: 262px;" %>
-        </p>
-        <p>
-          Simply turn on the switch for project files in Git repositories 
-          which should be monitored by VersionEye! 
-        </p>
-        <p style="text-align: center;"> 
-          <%= image_tag "marketing/stash_repository.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray; width: 410px;" %>
-        </p> 
-        <p>
-          Simply turn on the switch and receive daily email notifications 
-          about your dependencies. It was never easier! 
-        </p>
-      </div>
-    </div>
-  </div>
 
 
-  <div class="well-white l_lp_well_margin" >
-    <h2 class="no_margin">How do I install VersionEye Enterprise?</h2>
-    <p style="padding-top: 15px;">
+
+  <h2 >How do I install VersionEye Enterprise?</h2>
+  <div class="well-white" >
+    <p >
       We provide VersionEye Enterprise as an virtual machine image. To be more exact, 
       we provide an <a href="http://www.vmware.com">VMWare</a> instance. All you need 
       is a <a href="http://www.vmware.com/products/player">VMWare Player</a> or 
@@ -196,14 +135,14 @@
       Enterprise with your private SMTP, Repository and Git server. 
     </p> 
     <p style="text-align: center;">
-      <%= image_tag "marketing/versioneye_smtp.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray; width: 600px;" %>
+      <%= image_tag "marketing/versioneye_settings.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray; width: 700px;" %>
     </p>
   </div>
 
 
-  <div class="well-white l_lp_well_margin" >
-    <h2 class="no_margin">Which resources are needed for the Enterprise VM?</h2>
-    <p style="padding-top: 15px;">
+  <h2>Which resources are needed for the Enterprise VM?</h2>
+  <div class="well-white" >
+    <p >
       The minimum requirements are: 
       <ul>
         <li>1 CPU 2.0 GHz</li>
@@ -223,9 +162,9 @@
   </div>
 
 
-  <div class="well-white l_lp_well_margin" >
-    <h2 class="no_margin">How are software updates rolled out?</h2>
-    <p style="padding-top: 15px;">
+  <h2 >How are software updates rolled out?</h2>
+  <div class="well-white" >
+    <p >
       VersionEye is running on <a href="https://www.docker.com/">Docker</a>! Currently 
       the whole software for VersionEye and all the backend systems are distributed 
       over multiple Docker containers. On Port 9999 we provide a web interface to 
@@ -237,14 +176,14 @@
     <p>
       Updates are provided as new Docker containers. With a single click the current 
       Docker containers can be downloaded directly into the VM, via a secure SSL 
-      connection! Updating software was never easier! 
+      connection! <b>Updating software was never easier!</b> 
     </p>
   </div>
 
 
-  <div class="well-white l_lp_well_margin" >
-    <h2 class="no_margin">How to keep the database up-to-date?</h2>
-    <p style="padding-top: 15px;">
+  <h2 >How to keep the database up-to-date?</h2>
+  <div class="well-white" >  
+    <p >
       <a href="https://www.versioneye.com">VersionEye.com</a> is monitoring 
       550K open source projects on a daily basis. The crawlers are running 24/7 to 
       keep our database in the cloud up-to-date. VersionEye Enterprise can crawl your 
@@ -269,11 +208,9 @@
   </div>
 
 
-  <div class="well-white l_lp_well_margin" >
-
-    <h2 class="no_margin">Interested?</h2>
-
-    <p style="padding-top: 15px;">
+<div style="margin-left: 50px; margin-right: 50px;">
+  <h2 >Interested?</h2>
+    <p >
       Please fill out the form bellow if you are interested in VersionEye Enterprise. We will contact you soon. 
     </p>
 
