--- a/app/views/products/helpers/_how.erb
+++ b/app/views/products/helpers/_how.erb
@@ -2,9 +2,7 @@
 <div class="row" >
   <div class="span10 l_padding_surround" >
 
-    <h2 class="no_margin">How does it work?</h2>
-
-    <div class="row l_padding_top">
+    <div class="row">
       <div class="span1 integration_icon" >
         <span class="icon_gitcat" style="margin-left: -10px"></span>
       </div>
