--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,12 +18,14 @@
 </div>
 
 <div id="integration" class="container">
+  <h2 class="no_margin">How does it work?</h2>
   <div class="well-white l_lp_well_margin" >
     <%= render "/products/helpers/how" %>
   </div>
 </div>
 
 <div id="packagemanagers" class="container">
+  <h2 class="no_margin" > Package Managers </h2>
   <div class="well-white l_lp_well_margin" >
     <%= render "/products/helpers/support_for_packagemanagers" %>
   </div>
