Update About Page.

--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -4,6 +4,9 @@
 <div >
   <%= render 'shared/about' %>
   <br/>
+</div>
+
+<% if 1 == 2 %>
   <h2>Team</h2>
   <p>This is the Team behind VersionEye.</p>
 </div>
@@ -57,7 +60,7 @@
 </div>
 
 
-<% if 1 == 2 %>
+
 <div>
   <br/>
   <h2>Past Team Members</h2>
