--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -106,17 +106,12 @@
       <a href="http://www.jfrog.com/open-source/#os-arti">Artifactory Enterprise</a> (Java), 
       <a href="http://cocoapods.org/">CocoaPods</a> (Objective-C) and <a href="https://github.com/composer/satis">Satis</a> (PHP)!
     </p>
-    <p style="text-align: left;">
-      <a href="http://www.sonatype.com/nexus"><%= image_tag "marketing/nexus.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray;" %></a>
-      <a href="http://www.jfrog.com/open-source/#os-arti"><%= image_tag "marketing/artifactory.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray; margin-top: 5px;" %></a>
-      <a href="http://cocoapods.org/"><%= image_tag "marketing/cocoapods.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray;" %></a>
-      <a href="https://github.com/composer/satis"><%= image_tag "marketing/satis.png", :class => "img-border img-rounded", :style => "border: 1px solid lightgray;" %></a>
-    </p> 
-
   </div>
 
-
-
+  <h2 >Which package managers are supported?</h2>
+  <div class="well-white l_lp_well_margin" >
+    <%= render "/products/helpers/support_for_packagemanagers" %>
+  </div>
 
 
   <h2 >How do I install VersionEye Enterprise?</h2>
