--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -3,6 +3,7 @@
   <div class="container row footer_link_row_1" >
     <%= link_to t(:page_footer_about), about_path %> |
     <a href="/pricing">Pricing</a> |
+    <%= link_to 'Enterprise', enterprise_path %> | 
     <a href="/faq">FAQs</a> |
     <%= link_to t(:page_footer_statistics), statistics_path %> |
     <a href="https://bitbucket.org/versioneye/versioneye/issues" id="feedback_footer" target="_ISSUES" >Feedback</a> |
