--- a/app/views/shared/_product_license_table.html.erb
+++ b/app/views/shared/_product_license_table.html.erb
@@ -3,7 +3,7 @@
 <table class="dependency_table" style="width: <%= width %>px;">
   <thead>
     <tr>
-      <th width="200px">Dependency</th>
+      <th >Dependency</th>
       <th >License</th>
     </tr>
   </thead>
@@ -53,7 +53,11 @@
     <% end %>
   <% end %>
 </table>
-
+<% if !project_id.to_s.empty? && !license_whitelist_id.to_s.empty? %> 
+  <div style="margin-top: 10px;">
+    <%= link_to 'PDF Export', lwl_export_user_project_path( project_id ) %>
+  </div>
+<% end %> 
 <br/><br/>
 
 <% license_hash.sort.map do |license_name, value| %>
